<resources>
    <string name="app_name">Preços</string>
    <string name="login_intro">LOGIN</string>
    <string name="signin_intro">Sign in</string>
    <string name="tipo_cadastro_intro">Escolha o seu tipo de conta</string>
    <string name="professor_intro">Professor</string>
    <string name="aluno_intro">Aluno</string>
    <string name="nome_intro">NOME</string>
    <string name="cifrao_intro">R$  </string>
    <string name="sobrenome_intro">SOBRENOME</string>
    <string name="universidade_intro">"UNIVERSIDADE "</string>
    <string name="email_intro">EMAIL</string>
    <string name="senha_intro">SENHA</string>
    <string name="nome_hint_intro">Primeiro nome</string>
    <string name="sobrenome_hint_intro">Último nome</string>
    <string name="universidade_hint_intro">Sigla apenas. (Ex: UFV, UFMG, USP)</string>
    <string name="email_hint_intro">example@domain.com</string>
    <string name="senha_hint_intro">Mínimo de 6 caracteres</string>
    <string name="professor_selecionado_intro">"Professor selecionado:   "</string>
    <string name="matricula_cadastro_intro">MATRICULA</string>
    <string name="selecionar_professor_intro">Clique para selecionar um professor</string>
    <string name="matricula_hint_intro">Apenas números. (Ex: 00000, 99999)</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="valor_commodities">Preço dos produtos</string>
    <string name="comprar_intro">Comprar</string>
    <string name="vender_button_intro">Vender</string>
    <string name="central_venda_commodities_intro">Venda de commodities</string>
    <string name="codigo_monitor_intro">CÓDIGO CADASTRO MONITOR</string>
    <string name="lista_commodities_intro">LISTA DE COMMODITIES</string>


    <!-- Daqui pra baixo irei colocar as strings que pertencem a arrays e arrays de string -->

    <string name="algodao">Algodão</string>
    <string name="amendoim">Amendoim</string>
    <string name="arroz">Arroz</string>
    <string name="bezerro">Bezerro</string>
    <string name="boiGordo">Boi gordo</string>
    <string name="cafe">Café</string>
    <string name="feijao">Feijão</string>
    <string name="frango">Frango</string>
    <string name="milho">Milho</string>
    <string name="soja">Soja</string>
    <string name="sorgo">Sorgo</string>
    <string name="trigo">Trigo</string>
    <string name="confirmar_intro">Confirmar</string>
    <string name="justificativa_intro">JUSTIFICATIVA</string>
    <string name="vender_commodities_intro">Vender</string>
    <string name="monitor_intro">Monitor?</string>
    <string name="codigo_professor_intro">CÓDIGO PROFESSOR</string>
    <string name="codigo_monitor_hint">Senha para cadastro de professor</string>
    <string name="gerenciar_commodities_intro">Atualizar preços</string>
    <string name="visibility_change_intro">Permitir negociação de ordens</string>
    <string name="graficos_intro">Líderes</string>
    <string name="sugar_intro">Açúcar</string>
    <string name="suino_intro">Suíno</string>
    <string name="sobre_intro">Sobre</string>
    <string name="sobre_equipe_intro">Este aplicativo foi desenvolvido pela Equipe Agro Plus UFV. Clique aqui e conheça um pouco da nossa história. </string>
    <string name="sobre_intro_value">AgroPlus Preços tem como objetivo estimular futuros profissionais a acompanhar e compreender o comportamento de preços de produtos agrícolas. O aplicativo é um jogo no qual os participantes buscam obter o maior resultado negociando periodicamente um conjunto de produtos. Os participantes têm a opção de justificar suas negociações. O jogo foi concebido como um instrumento didático para atividades em sala de aula da disciplina Administração Rural e capacitações de alunos envolvidos em projetos de extensão rural e pesquisa aplicada da equipe AgroPlus do Departamento de Economia Rural na Universidade Federal de Viçosa.</string>
    <string name="coordenador_intro">Coordenador</string>
    <string name="desenvolvedor_intro">Desenvolvedor</string>
    <string name="equipe_intro">Equipe</string>
    <string name="aziz_galvao">Prof. Aziz Galvão da Silva Júnior (PhD, Professor Titular UFV).</string>
    <string name="fabiano_gomes">Fabiano Gomes de Melo Júnior (Acadêmico de Ciência da Computação, UFV) </string>
    <string name="john_lucas">John Lucas Teixeira (Acadêmico do Curso de Agronegócio, UFV)</string>
    <string name="patricia_souza">Patrícia Barbosa Souza (Acadêmica do Curso de Agronegócio, UFV)</string>
    <string name="patrimonio_chart_intro">Acumulado</string>
    <string name="variacao_chart_intro">Variação</string>
    <string name="selecione_turma_intro">Selecionar turma</string>
    <string name="sem_turma_intro">"Você não pertence a uma turma. "</string>
    <string name="criar_turma_intro">Criar </string>
    <string name="participar_turma">Participar</string>
    <string name="selecionar_acao">O que deseja fazer?</string>
    <string name="senha_turma_intro">Apenas para salas privadas</string>
    <string name="creditos_intro">CRÉDITOS</string>
    <string name="creditos_intro_hint">Quantia inicial. Use . para decimal.</string>
    <string name="nome_sala_intro">Nome da turma</string>
    <string name="criar_sala_intro">Crie uma turma</string>
    <string name="selecionar_turma_intro">Selecione a turma de interesse.</string>
    <string name="confirmar_turma_intro">Deseja participar dessa turma?</string>
    <string name="senha_hint_participar_turma">Sala privada. Digite a senha.</string>
    <string name="recusar_intro">Recusar</string>
    <string name="monitor_cadastro_hint">Permite cadastrar monitores</string>
    <string name="participantes_intro">Participantes</string>
    <string name="requer_senha">Requer Senha?</string>
    <string name="abobora_text">Abóbora</string>
    <string name="description_text">imageresource</string>
    <string name="alface">Alface</string>
    <string name="batata">Batata</string>
    <string name="cebola">Cebola</string>
    <string name="goiaba">Goiaba</string>
    <string name="leite">Leite</string>
    <string name="mandioca">Mandioca</string>
    <string name="ovos">Ovos</string>
    <string name="tomate">Tomate</string>
    <string name="banana">Banana</string>
    <string name="cenoura">Cenoura</string>
    <string name="laranja">Laranja</string>
    <string name="limao">Limão</string>
    <string name="soja">Soja</string>

    <string-array name="commodities">
        <item name="Algodão" />
        <item name="Amendoim" />
        <item name="Arroz" />
        <item name="Bezerro" />
        <item name="Boi gordo" />
        <item name="Café" />
        <item name="Feijão" />
        <item name="Frango" />
        <item name="Milho" />
        <item name="Soja" />
        <item name="Sorgo" />
        <item name="Trigo" />
    </string-array>
</resources>
