<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundPadrao"
    android:gravity="center|center_horizontal"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="Cadastrar"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="36sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="75dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nome_intro"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/nomeCadastroProfessor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nome_hint_intro"
        android:inputType="textCapWords"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sobrenome_intro"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/sobrenomeCadastroProfessor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/sobrenome_hint_intro"
        android:inputType="textCapWords"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/universidade_intro"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/universidadeCadastroProfessor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/universidade_hint_intro"
        android:inputType="textCapCharacters"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_intro"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/emailCadastroProfessor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email_hint_intro"
        android:inputType="textPersonName"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/senha_intro"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/senhaCadastroProfessor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/senha_hint_intro"
        android:inputType="textPassword"
        android:textAlignment="center" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="75dp" />

    <Button
        android:id="@+id/button79"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_shape_primary"
        android:onClick="cadastrarProfessor"
        android:text="@string/signin_intro"
        android:textColor="@color/backgroundPadrao"
        android:textStyle="bold" />


</LinearLayout>