<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundPadrao">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/selecionar_professor_intro"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerCadastroMonitor"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/button_shape_secondary"
            android:padding="5dp"
            android:scrollbarAlwaysDrawHorizontalTrack="false"
            android:scrollbarAlwaysDrawVerticalTrack="true">

        </androidx.recyclerview.widget.RecyclerView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/professor_selecionado_intro"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/professorSelecionadoMonitor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nome_intro"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/nomeCadastroMonitor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nome_hint_intro"
            android:inputType="textCapWords"
            android:textAlignment="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sobrenome_intro"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/sobrenomeCadastroMonitor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/sobrenome_hint_intro"
            android:inputType="textCapWords"
            android:textAlignment="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/matricula_cadastro_intro"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/matriculaCadastroMonitor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/matricula_hint_intro"
            android:inputType="number"
            android:textAlignment="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_intro"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/emailCadastroMonitor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email_hint_intro"
            android:inputType="textPersonName"
            android:textAlignment="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/senha_intro"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/senhaCadastroMonitor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/senha_hint_intro"
            android:inputType="textPassword"
            android:textAlignment="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/codigo_professor_intro"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/codigoCadastroMonitor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"

            android:hint="@string/codigo_monitor_hint"
            android:inputType="textPassword"
            android:textAlignment="center" />

        <Button
            android:id="@+id/button99"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_shape_primary"
            android:onClick="criarMonitor"
            android:text="@string/signin_intro"
            android:textColor="@color/backgroundPadrao"
            android:textSize="18sp"
            android:textStyle="bold" />


    </LinearLayout>
</ScrollView>