<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layoutProgressBar2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="-20dp"
        android:background="#50000000"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progressBar3"
            style="?android:attr/progressBarStyle"
            android:layout_width="100dp"
            android:layout_height="100dp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:text="Cadastrar"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="36sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nome_intro"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/nomeCadastroAluno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nome_hint_intro"
            android:inputType="textCapWords"
            android:textAlignment="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sobrenome_intro"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/sobrenomeCadastroAluno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/sobrenome_hint_intro"
            android:inputType="textCapWords"
            android:textAlignment="center" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/universidade_intro"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/universidadeCadastroAluno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:ems="10"
            android:hint="@string/universidade_hint_intro"
            android:inputType="textCapCharacters"
            android:textAlignment="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_intro"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/emailCadastroAluno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email_hint_intro"
            android:inputType="textPersonName"
            android:textAlignment="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/senha_intro"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/senhaCadastroAluno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/senha_hint_intro"
            android:inputType="textPassword"
            android:textAlignment="center" />

        <Button
            android:id="@+id/button6"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_shape_primary"
            android:onClick="criarAluno"
            android:text="@string/signin_intro"
            android:textColor="@color/backgroundPadrao"
            android:textSize="18sp"
            android:textStyle="bold" />


    </LinearLayout>

    </ScrollView>

</FrameLayout>