<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundPadrao"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/button4"
            android:layout_width="250dp"
            android:layout_height="55dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_shape_primary"
            android:onClick="iniciarCadastroProfessor"
            android:text="@string/professor_intro"
            android:textColor="@color/backgroundPadrao"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button5"
            android:layout_width="250dp"
            android:layout_height="55dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_shape_third"
            android:onClick="autorizaCadastroMonitor"
            android:text="@string/monitor_intro"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="250dp"
            android:layout_height="55dp"
            android:background="@drawable/button_shape_secondary"
            android:onClick="permitirCadastroAluno"
            android:text="@string/aluno_intro"
            android:textSize="24sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/tipo_cadastro_intro"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="30sp" />
</FrameLayout>