<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundPadrao"
    tools:context=".activities.GerenciarTurmasActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/selectorAction"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:minHeight="730dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-100dp"
                android:layout_marginBottom="100dp"
                android:fontFamily="@font/roboto_light"
                android:text="@string/selecionar_acao"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="30sp" />

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/button_shape_primary"
                android:fontFamily="@font/roboto_light"
                android:minHeight="55dp"
                android:onClick="exibirCriarTurma"
                android:text="@string/criar_turma_intro"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_shape_secondary"
                android:fontFamily="@font/roboto_light"
                android:minHeight="55dp"
                android:onClick="exibirSelecionarTurma"
                android:text="@string/participar_turma"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/cadastrarTurma"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"></LinearLayout>

        <LinearLayout
            android:id="@+id/selecionarTurma"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"></LinearLayout>
    </LinearLayout>

</ScrollView>