<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundPadrao"
    android:padding="5dp"
    tools:context=".activities.GerenciarCommoditiesActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vender_commodities_intro"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerVenderCommodities"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp">

            </androidx.recyclerview.widget.RecyclerView>

            <TextView
                android:id="@+id/textView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/justificativa_intro"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/justificativaVenda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp"
                android:autoLink="all"
                android:background="@android:color/white"
                android:gravity="top|left"
                android:inputType="textMultiLine|textCapSentences"
                android:lines="5"
                android:maxLines="10"
                android:minHeight="200dp"
                android:minLines="1"
                android:padding="10dp"
                android:scrollbars="none" />

            <Button
                android:id="@+id/confirmarVendaButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="15dp"
                android:background="@drawable/button_shape_primary"
                android:text="@string/confirmar_intro"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </ScrollView>


</FrameLayout>